tests/src/frontend/typechecking/invalid/lambda_mutable_arg3.sk
fun doNothing<T>(_f: Ref<T> -> void, _t: T): void {
  void
}

fun move<T>(f: (mutable Ref<T>) -> void, t: T): void {
  ref = mutable Ref<T>(t);
  f(ref)
}

fun main(): void {
  lambda = (
    ref -> {
      ref.!value = "hello"
    }
  );
  doNothing(lambda, "");
  move(lambda, "");
  print_raw("fail")
}
